se modifico el subrayado del texto

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="contend-border__section-2">
                         <div>
                             <p>Da clic en el botón de WhatsApp para contactarnos para saber más sobre el
-                                otorrinolaringólogo en Monterrey.
+                                <strong><u>otorrinolaringólogo en Monterrey</u></strong>.
                             </p>
                             <button>
                                 <img src="./assets/whatsapp.png" alt="">
@@ -128,8 +128,8 @@
                 </div>
                 <div class="footer-contend__direccion">
                     <p>
-                        Visitanos para que seas atendido con la atención que te mereces en <br>
-                        Centro de Especialidades Médicas <br>
+                        Visitanos para que seas atendido con la atención que te mereces en
+                        Centro de Especialidades Médicas. <br><br>
                         1er piso consultorio 126 Jose Benitez No 2704 Colonia obispado Monterrey NL CP 64060
                     </p>
                 </div>
